✨ feat: Add nvs example

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,22 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = show
+default_envs = nvs
 
-[env:flash]
-platform = espressif32@6.1.0
-board = esp32doit-devkit-v1
-framework = espidf
-monitor_speed = 115200
-monitor_raw = yes
-monitor_filters = 
-	direct
-	esp32_exception_decoder
-build_flags = 
-	-DCORE_DEBUG_LEVEL=5
-	-DCONFIG_ARDUHAL_LOG_COLORS=1
-
-[env:show]
+[env:nvs]
 platform = espressif32@6.1.0
 board = esp32doit-devkit-v1
 framework = espidf
