✨ feat: Changes EaaS nvs

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = nvs
+default_envs = AGV1-id5
 
-[env:nvs]
+[env:PCB1-id1]
 platform = espressif32@6.1.0
 board = esp32doit-devkit-v1
 framework = espidf
@@ -22,3 +22,74 @@ monitor_filters =
 build_flags = 
 	-DCORE_DEBUG_LEVEL=5
 	-DCONFIG_ARDUHAL_LOG_COLORS=1
+	-DMACHINES_ID_1
+
+[env:PCB2-id2]
+platform = espressif32@6.1.0
+board = esp32doit-devkit-v1
+framework = espidf
+monitor_speed = 115200
+monitor_raw = yes
+monitor_filters = 
+	direct
+	esp32_exception_decoder
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_ARDUHAL_LOG_COLORS=1
+	-DMACHINES_ID_2
+
+[env:3D1-id3]
+platform = espressif32@6.1.0
+board = esp32doit-devkit-v1
+framework = espidf
+monitor_speed = 115200
+monitor_raw = yes
+monitor_filters = 
+	direct
+	esp32_exception_decoder
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_ARDUHAL_LOG_COLORS=1
+	-DMACHINES_ID_3
+
+[env:3D2-id4]
+platform = espressif32@6.1.0
+board = esp32doit-devkit-v1
+framework = espidf
+monitor_speed = 115200
+monitor_raw = yes
+monitor_filters = 
+	direct
+	esp32_exception_decoder
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_ARDUHAL_LOG_COLORS=1
+	-DMACHINES_ID_4
+
+[env:AGV1-id5]
+platform = espressif32@6.1.0
+board = esp32doit-devkit-v1
+framework = espidf
+monitor_speed = 115200
+monitor_raw = yes
+monitor_filters = 
+	direct
+	esp32_exception_decoder
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_ARDUHAL_LOG_COLORS=1
+	-DMACHINES_ID_5
+
+[env:AGV2-id6]
+platform = espressif32@6.1.0
+board = esp32doit-devkit-v1
+framework = espidf
+monitor_speed = 115200
+monitor_raw = yes
+monitor_filters = 
+	direct
+	esp32_exception_decoder
+build_flags = 
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_ARDUHAL_LOG_COLORS=1
+	-DMACHINES_ID_6
